syntax = "proto3";

option csharp_namespace = "GRSAccountProto";

package GRSAuthentication;

service Authentication {
  rpc Login (LoginRequest) returns (AuthenticationResponse);
  rpc Register (RegisterRequest) returns (GenericResponse);
}

message LoginRequest{
  string userName = 1;
  string password = 2;
}

message AuthenticationResponse{
  bool status = 1;
  optional string token = 2;
  optional int32 expiresIn = 3;
}

message RegisterRequest {
  string login = 1;
  string password = 2;
  string email = 3;
}

message GenericResponse {
  bool status = 1;
  optional string error = 2;
}